# as-statsd

./: LICENSE  README.md  README.rst  docker-compose.yml  setup.cfg  telegraf.conf
as_statsd/: statsd.py
demo/: main.py
tests/: test_processor.py
